chore: update to latest

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,201 +10,502 @@
  * governing permissions and limitations under the License.
  */
 
+@import url('colors.css');
+@import url('containers.css');
+@import url('typography.css');
+
 :root {
+  /* layers */
+  --layer-elevated: var(--gray-25);
+  --layer-base: var(--layer-elevated);
+  --layer-depth: var(--gray-50);
+  --layer-pasteboard: var(--gray-100);
+
   /* colors */
-  --link-color: #035fe6;
-  --link-hover-color: #136ff6;
-  --background-color: white;
-  --light-color: #eee;
-  --dark-color: #ccc;
-  --text-color: black;
+  --color-background: var(--layer-base);
+  --color-text: var(--gray-800);
+  --color-link: var(--blue-900);
+  --color-link-hover: var(--blue-1000);
 
   /* fonts */
-  --body-font-family: roboto, roboto-fallback;
+  --body-font-family: robotoflex, robotoflex-fallback, sans-serif;
   --heading-font-family: var(--body-font-family);
-  --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
+  --code-font-family: robotomono, 'Courier New', monospace;
 
-  /* body sizes */
-  --body-font-size-m: 22px;
-  --body-font-size-s: 18px;
-  --body-font-size-xs: 16px;
+  /* spacing */
+  --spacing-xxl: var(--spacing-600);
+  --spacing-xl:  var(--spacing-500);
+  --spacing-l:   var(--spacing-400);
+  --spacing-m:   var(--spacing-300);
+  --spacing-s:   var(--spacing-200);
+  --spacing-xs:  var(--spacing-100);
 
-  /* heading sizes */
-  --heading-font-size-xxl: 48px;
-  --heading-font-size-xl: 40px;
-  --heading-font-size-l: 32px;
-  --heading-font-size-m: 24px;
-  --heading-font-size-s: 20px;
-  --heading-font-size-xs: 18px;
+  /* shadows */
+  --shadow-default: 0 1px 6px 0 var(--transparent-black-300);
+  --shadow-hover: 0 2px 8px 0 var(--transparent-black-300);
+  --shadow-dragged: 0 3px 12px 0 var(--transparent-black-300);
 
-  /* nav height */
-  --nav-height: 64px;
-}
-
-@font-face {
-  font-family: roboto-fallback;
-  size-adjust: 100.06%;
-  ascent-override: 95%;
-  src: local('Arial');
+  /* widths and heights */
+  --header-height: 72px;
+  --horizontal-spacing: var(--spacing-l);
 }
 
 @media (width >= 900px) {
   :root {
-    --heading-font-size-xxl: 60px;
-    --heading-font-size-xl: 48px;
-    --heading-font-size-l: 36px;
-    --heading-font-size-m: 30px;
-    --heading-font-size-s: 24px;
-    --heading-font-size-xs: 22px;
+    /* widths and heights */
+    --header-height: 68px;
+    --horizontal-spacing: var(--spacing-xl);
   }
 }
 
+/* fallback fonts */
+@font-face {
+  font-family: robotoflex-fallback;
+  size-adjust: 97.389%;
+  src: local('Arial');
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
-  font-size: var(--body-font-size-m);
+  display: none;
   margin: 0;
   font-family: var(--body-font-family);
-  line-height: 1.6;
-  color: var(--text-color);
-  background-color: var(--background-color);
-  display: none;
+  font-size: var(--body-size-l);
+  line-height: var(--line-height-m);
+  background-color: var(--layer-depth);
+  color: var(--color-text);
 }
 
 body.appear {
   display: block;
 }
 
+body[data-scroll='disabled'] {
+  overflow-y: hidden;
+}
+
 header {
-  height: var(--nav-height);
+  min-height: var(--header-height);
+  transition: height 0.2s, min-height 0.2s;
 }
 
-h1, h2, h3,
-h4, h5, h6 {
+main {
+  max-width: 1200px;
+  margin: 0 var(--horizontal-spacing);
+  padding: var(--horizontal-spacing) 0;
+  border-radius: var(--rounding-xl);
+  background-color: var(--color-background);
+}
+
+@media (width >= 900px) {
+  main {
+    max-width: calc(100% - (2 * var(--horizontal-spacing)));
+    margin: 0 auto;
+  }
+}
+
+@media (width >= 1264px) {
+  main {
+    max-width: 1200px;
+  }
+}
+
+/* sections */
+main > .section {
+  max-width: 1200px;
+  margin: var(--spacing-500) 0;
+}
+
+main > .section > div {
+  margin: var(--horizontal-spacing) auto;
+  padding: 0 var(--horizontal-spacing);
+}
+
+main > .section:first-of-type {
+  margin-top: 0;
+  border-top-left-radius: var(--rounding-xl);
+  border-top-right-radius: var(--rounding-xl);
+}
+
+main > .section:last-of-type {
+  border-bottom-left-radius: var(--rounding-xl);
+  border-bottom-right-radius: var(--rounding-xl);
+}
+
+/* section metadata */
+main .section.light {
+  background-color: var(--light-color);
+}
+
+main .section.dark {
+  background-color: var(--gray-400);
+}
+
+/* images and icons */
+p.img-wrapper {
+  margin: 0;
+  line-height: 0;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.icon svg,
+.icon img {
+  width: 1em;
+  height: 1em;
+  fill: currentcolor;
+  color: currentcolor;
+}
+
+i.symbol {
+  display: inline-block;
+  position: relative;
+  width: 1em;
+  height: 1em;
+  vertical-align: middle;
+}
+
+i.symbol::before,
+i.symbol::after {
+  content: '';
+  position: absolute;
+}
+
+i.symbol.symbol-loading {
+  border: var(--border-m) solid;
+  border-radius: 50%;
+}
+
+i.symbol.symbol-loading::after {
+  inset: calc(-1 * var(--border-m));
+  border: inherit;
+  border-right-color: var(--color-link);
+  border-radius: inherit;
+  animation: loading 1.5s ease-in-out infinite;
+}
+
+@keyframes loading {
+  from {
+    transform: rotate(0deg)
+  }
+
+  to {
+    transform: rotate(360deg)
+  }
+}
+
+/* typography */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 1.125em;
+  margin-bottom: 0.25em;
+  scroll-margin: 1em;
   font-family: var(--heading-font-family);
-  font-weight: 600;
-  line-height: 1.25;
-  margin-top: 1em;
-  margin-bottom: .5em;
-  scroll-margin: calc(var(--nav-height) + 1em);
+  font-weight: var(--weight-extrabold);
+  line-height: var(--line-height-l);
 }
 
-h1 { font-size: var(--heading-font-size-xxl) }
-h2 { font-size: var(--heading-font-size-xl) }
-h3 { font-size: var(--heading-font-size-l) }
-h4 { font-size: var(--heading-font-size-m) }
-h5 { font-size: var(--heading-font-size-s) }
-h6 { font-size: var(--heading-font-size-xs) }
-
-p, dl, ol, ul, pre, blockquote {
-  margin-top: 1em;
-  margin-bottom: 1em;
+h1 {
+  font-size: var(--heading-size-xxl);
 }
 
-code, pre {
-  font-family: var(--fixed-font-family);
-  font-size: var(--body-font-size-s);
+h2 {
+  font-size: var(--heading-size-xl);
 }
 
-code {
-  padding: .125em;
+h3 {
+  font-size: var(--heading-size-l);
+}
+
+h4 {
+  font-size: var(--heading-size-m);
+}
+
+h5 {
+  font-size: var(--heading-size-s);
+}
+
+h6 {
+  font-size: var(--heading-size-xs);
+}
+
+p,
+ol,
+ul,
+dl,
+pre,
+blockquote {
+  margin-top: 0.75em;
+  margin-bottom: 0.75em;
+}
+
+pre,
+code,
+kbd,
+samp,
+var {
+  font-family: var(--code-font-family);
+  font-size: var(--body-size-m);
 }
 
 pre {
-  overflow: scroll;
+  border-radius: var(--rounding-l);
+  padding: var(--spacing-m);
+  background-color: var(--layer-depth);
+  overflow-x: auto;
 }
 
-main pre {
-  background-color: var(--light-color);
-  padding: 1em;
-  border-radius: .25em;
-  overflow-x: auto;
-  white-space: pre;
+pre::-webkit-scrollbar {
+  height: 24px;
+}
+
+pre::-webkit-scrollbar-thumb {
+  background-color: var(--gray-500);
+  border: 8px solid var(--layer-depth);
+  border-radius: 12px;
+}
+
+pre::-webkit-scrollbar-thumb:hover {
+  background-color: var(--gray-600);
+}
+
+code,
+kbd,
+samp,
+var {
+  border-radius: var(--rounding-s);
+  padding: 0 0.25em;
+  background-color: var(--layer-depth);
+}
+
+.detail {
+  margin-top: 1.125em;
+  margin-bottom: 0.25em;
+  line-height: var(--line-height-m);
 }
 
 /* links */
 a:any-link {
-  color: var(--link-color);
+  color: var(--color-link);
   text-decoration: none;
+  transition: color 0.2s;
 }
 
 a:hover {
+  color: var(--color-link-hover);
   text-decoration: underline;
-  color: var(--link-hover-color);
+}
+
+a:focus {
+  outline: var(--border-m) solid var(--color-link);
+  outline-offset: var(--border-m);
 }
 
 /* buttons */
-a.button:any-link, button {
-  font-family: var(--body-font-family);
+.button-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--spacing-s);
+}
+
+a.button,
+button.button {
   display: inline-block;
-  box-sizing: border-box;
-  text-decoration: none;
-  border: 2px solid transparent;
-  padding: 5px 30px;
+  border: var(--border-m) solid var(--color-link);
+  border-radius: 1.15em;
+  padding: 0.4em 1.15em;
+  background-color: var(--color-link);
+  color: var(--color-background);
+  font-size: inherit;
+  font-weight: var(--weight-medium);
   text-align: center;
-  font-style: normal;
-  font-weight: 600;
-  cursor: pointer;
-  color: var(--background-color);
-  background-color: var(--link-color);
-  margin: 16px 0;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  border-radius: 30px;
-}
-
-a.button:hover, a.button:focus, button:hover, button:focus  {
-  background-color: var(--link-hover-color);
+  transition: border-color 0.2s, background-color 0.2s, color 0.2s;
   cursor: pointer;
 }
 
-button:disabled, button:disabled:hover {
-  background-color: var(--light-color);
-  cursor: unset;
+a.button:hover,
+button.button:hover,
+button.button:focus {
+  border-color: var(--color-link-hover);
+  background-color: var(--color-link-hover);
+  color: var(--color-background);
+  text-decoration: none;
 }
 
-a.button.secondary, button.secondary {
-  background-color: unset;
-  border: 2px solid currentcolor;
-  color: var(--text-color)
+button.button:disabled,
+button.button:disabled:hover,
+button.button:disabled:focus {
+  border-color: var(--gray-100);
+  background-color: var(--gray-100);
+  color: var(--gray-400);
+  cursor: not-allowed;
 }
 
-main img {
+a.button.emphasis,
+button.button.emphasis {
+  border-color: var(--gray-800);
+  background-color: var(--gray-800);
+}
+
+a.button.emphasis:hover,
+button.button.emphasis:hover,
+button.button.emphasis:focus {
+  border-color: var(--gray-900);
+  background-color: var(--gray-900);
+}
+
+a.button.outline,
+button.button.outline {
+  border-color: var(--color-link);
+  background-color: var(--color-background);
+  color: var(--color-link);
+}
+
+a.button.outline:hover,
+button.button.outline:hover,
+button.button.outline:focus {
+  border-color: var(--color-link-hover);
+  background-color: var(--blue-100);
+  color: var(--color-link-hover);
+}
+
+button.button.outline:disabled,
+button.button.outline:disabled:hover,
+button.button.outline:disabled:focus {
+  border-color: var(--gray-100);
+  background-color: var(--color-background);
+  color: var(--gray-400);
+}
+
+a.button.accent,
+button.button.accent {
+  border-color: var(--gray-100);
+  color: var(--color-text);
+  background-color: var(--gray-100);
+}
+
+a.button.accent:hover,
+button.button.accent:hover,
+button.button.accent:focus {
+  border-color: var(--gray-200);
+  background-color: var(--gray-200);
+}
+
+/* form elements */
+input,
+textarea,
+select,
+button {
   max-width: 100%;
-  width: auto;
-  height: auto;
+  font: inherit;
+  transition: border-color 0.2s;
 }
 
-.icon {
-  display: inline-block;
-  height: 24px;
-  width: 24px;
-}
-
-.icon img {
-  height: 100%;
+input,
+textarea,
+select {
   width: 100%;
+  border: var(--border-m) solid var(--gray-300);
+  border-radius: var(--rounding-m);
+  padding: 0.4em 0.85em;
+  color: var(--color-text);
 }
 
-/* sections */
-main .section {
-  padding: 64px 16px;
+button,
+fieldset {
+  appearance: none;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
 }
 
-@media (width >= 600px) {
-  main .section {
-    padding: 64px 32px;
-  }
+label {
+  display: block;
+  margin-bottom: 0.5em;
 }
 
-@media (width >= 900px) {
-  .section > div {
-    max-width: 1200px;
-    margin: auto;
-  }
+label,
+legend,
+.field-help-text,
+.form-error {
+  color: var(--gray-700);
+  font-size: var(--body-size-m);
 }
 
-/* section metadata */
-main .section.light,
-main .section.highlight {
-  background-color: var(--light-color);
+input:hover,
+textarea:hover,
+select:hover {
+  border-color: var(--gray-400);
+}
+
+input:focus,
+textarea:focus,
+select:focus,
+button:focus {
+  outline: var(--border-m) solid var(--color-link);
+  outline-offset: var(--border-m);
+  border-color: var(--color-text);
+  color: var(--gray-900);
+}
+
+input:disabled,
+input:hover:disabled,
+input:focus:disabled,
+textarea:disabled,
+textarea:hover:disabled,
+textarea:focus:disabled,
+select:disabled,
+select:hover:disabled,
+select:focus:disabled {
+  border-color: var(--gray-100);
+  background-color: var(--color-background);
+  color: var(--gray-400);
+}
+
+input[readonly],
+textarea[readonly],
+select[readonly] {
+  border-color: var(--gray-300)
+}
+
+input[readonly]:focus,
+textarea[readonly]:focus,
+select[readonly]:focus {
+  outline: 0;
+}
+
+input[type='checkbox'],
+input[type='radio'] {
+  width: unset;
+}
+
+.form-field + .form-field {
+  margin-top: var(--spacing-l);
+}
+
+.form-error {
+  margin-top: 0.5em;
+  color: var(--red-900);
+}
+
+.field-help-text {
+  margin-top: 0.5em;
+}
+
+.field-help-text p {
+  margin: 0;
 }
