--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,275 +1,285 @@
-/* header and nav layout */
-header .nav-wrapper {
-  background-color: var(--background-color);
-  width: 100%;
-  z-index: 2;
-  position: fixed;
+/* stylelint-disable no-descending-specificity */
+header {
+  padding: var(--spacing-m) var(--horizontal-spacing);
 }
 
-header nav {
-  box-sizing: border-box;
-  display: grid;
-  grid-template:
-    'hamburger brand tools' var(--nav-height)
-    'sections sections sections' 1fr / auto 1fr auto;
-  align-items: center;
-  gap: 0 2em;
-  margin: auto;
-  max-width: 1264px;
-  height: var(--nav-height);
-  padding: 0 1rem;
-  font-family: var(--body-font-family);
-}
-
-header nav[aria-expanded="true"] {
-  grid-template:
-    'hamburger brand' var(--nav-height)
-    'sections sections' 1fr
-    'tools tools' var(--nav-height) / auto 1fr;
-  overflow-y: auto;
-  min-height: 100vh;
-}
-
-@media (width >= 600px) {
-  header nav {
-    padding: 0 2rem;
-  }
-}
-
-@media (width >= 900px) {
-  header nav {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  header nav[aria-expanded="true"] {
-    min-height: 0;
-    overflow: visible;
-  }
-}
-
-header nav p {
-  margin: 0;
-  line-height: 1;
-}
-
-header nav a:any-link {
+header a:any-link {
   color: currentcolor;
 }
 
-/* hamburger */
-header nav .nav-hamburger {
-  grid-area: hamburger;
-  height: 22px;
-  display: flex;
-  align-items: center;
-}
-
-header nav .nav-hamburger button {
-  height: 22px;
+header ul {
+  list-style: none;
   margin: 0;
-  border: 0;
-  border-radius: 0;
   padding: 0;
-  background-color: var(--background-color);
-  color: inherit;
-  overflow: initial;
-  text-overflow: initial;
-  white-space: initial;
 }
 
-header nav .nav-hamburger-icon,
-header nav .nav-hamburger-icon::before,
-header nav .nav-hamburger-icon::after {
-  box-sizing: border-box;
-  display: block;
-  position: relative;
-  width: 20px;
+header section {
+  display: grid;
+  grid-template:
+    'title hamburger' auto
+    'sections tools' 1fr / 1fr auto;
+  align-items: center;
+  gap: 0 var(--horizontal-spacing);
+  max-width: 1200px;
+  height: 0;
+  margin: 0 auto;
+  transition: height 0.6s;
+  animation-timing-function: ease-in;
 }
 
-header nav .nav-hamburger-icon::before,
-header nav .nav-hamburger-icon::after {
-  content: '';
-  position: absolute;
-  background: currentcolor;
+header section[data-expanded='true'] {
+  grid-template:
+    'title hamburger' auto
+    'sections sections' auto
+    'tools tools' 1fr / 1fr auto;
+  gap: var(--horizontal-spacing);
+  height: calc(100dvh - (2 * var(--spacing-m)));
+  max-height: calc(100dvh - (2 * var(--spacing-m)));
 }
 
-header nav[aria-expanded="false"] .nav-hamburger-icon,
-header nav[aria-expanded="false"] .nav-hamburger-icon::before,
-header nav[aria-expanded="false"] .nav-hamburger-icon::after {
-  height: 2px;
-  border-radius: 2px;
-  background: currentcolor;
-}
-
-header nav[aria-expanded="false"] .nav-hamburger-icon::before {
-  top: -6px;
-}
-
-header nav[aria-expanded="false"] .nav-hamburger-icon::after {
-  top: 6px;
-}
-
-header nav[aria-expanded="true"] .nav-hamburger-icon {
-  height: 22px;
-}
-
-header nav[aria-expanded="true"] .nav-hamburger-icon::before,
-header nav[aria-expanded="true"] .nav-hamburger-icon::after {
-  top: 3px;
-  left: 1px;
-  transform: rotate(45deg);
-  transform-origin: 2px 1px;
-  width: 24px;
-  height: 2px;
-  border-radius: 2px;
-}
-
-header nav[aria-expanded="true"] .nav-hamburger-icon::after {
-  top: unset;
-  bottom: 3px;
-  transform: rotate(-45deg);
+header section > [aria-hidden='true'] {
+  display: none;
 }
 
 @media (width >= 900px) {
-  header nav .nav-hamburger {
-    display: none;
-    visibility: hidden;
+  header section[data-expanded='true'] {
+    grid-template:
+      'title sections tools' auto / auto 1fr auto;
+    height: 0;
   }
 }
 
-/* brand */
-header .nav-brand {
-  grid-area: brand;
-  flex-basis: 128px;
-  font-size: var(--heading-font-size-s);
-  font-weight: 700;
-  line-height: 1;
+/* title */
+header .nav-title {
+  grid-area: title;
 }
 
-header nav .nav-brand img {
-  width: 128px;
-  height: auto;
+header .nav-title .title-content {
+  margin: 0;
+  font-size: var(--title-size-l);
+  font-weight: var(--weight-bold);
 }
 
 /* sections */
-header nav .nav-sections {
+header .nav-sections {
   grid-area: sections;
-  flex: 1 1 auto;
-  display: none;
-  visibility: hidden;
-  background-color: var(--overlay-color);
 }
 
-header nav[aria-expanded="true"] .nav-sections {
+header .nav-sections nav ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1ch;
+  font-size: var(--body-size-m);
+}
+
+header .nav-sections nav > ul > li > a,
+header .nav-sections button,
+header .nav-sections button + ul > li a {
   display: block;
-  visibility: visible;
-  align-self: start;
+  width: 100%;
+  border-radius: 0.5em;
+  padding: 0.3em 0.75em;
+  background-color: transparent;
+  text-align: left;
+  transition: background-color 0.2s, color 0.2s;
+  cursor: pointer;
 }
 
-header nav .nav-sections ul  {
-  list-style: none;
-  padding-left: 0;
-  font-size: var(--body-font-size-s);
-  font-weight: 500;
+
+header .nav-sections nav ul li a:hover,
+header .nav-sections nav ul li a:focus,
+header .nav-sections button:hover,
+header .nav-sections button:focus {
+  background-color: var(--gray-100);
+  text-decoration: none;
 }
 
-header nav .nav-sections ul > li {
-  font-weight: 700;
+header .nav-sections button[aria-expanded='true'] {
+  background-color: var(--color-text);
+  color: var(--color-background);
 }
 
-header nav .nav-sections ul > li > ul {
-  margin-top: 0;
+header .nav-sections button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5ch;
+  padding-right: 0.5em;
+  white-space: nowrap;
 }
 
-header nav .nav-sections ul > li > ul > li {
-  font-weight: 500;
+header .nav-sections button + ul {
+  margin-top: 1ch;
+}
+
+header .nav-sections button + ul > li a {
+  display: block;
+  padding-left: calc(var(--spacing-m) + 0.75em);
+}
+
+header .nav-sections i.symbol-chevron {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  padding: 0.15em;
+  background-color: transparent;
+  transition: transform 0.2s;
+}
+
+header .nav-sections [aria-expanded='true'] i.symbol-chevron {
+  transform: rotate(-180deg);
+}
+
+header .nav-sections [aria-expanded='false'] + ul {
+  display: none;
+}
+
+header .nav-sections i.symbol-chevron::after {
+  top: 4px;
+  left: 5.25px;
+  width: calc(100% - (4 * 0.15em));
+  height: calc(100% - (4 * 0.15em));
+  border: 2px solid currentcolor;
+  border-left: 0;
+  border-bottom: 0;
+  transform: rotate(135deg);
 }
 
 @media (width >= 900px) {
-  header nav .nav-sections {
-    display: block;
-    visibility: visible;
-    white-space: nowrap;
-  }
-
-  header nav[aria-expanded="true"] .nav-sections {
-    align-self: unset;
-  }
-
-  header nav .nav-sections .nav-drop {
-    position: relative;
-    padding-right: 16px;
-    cursor: pointer;
-  }
-
-  header nav .nav-sections .nav-drop::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: .5em;
-    right: 2px;
-    transform: rotate(135deg);
-    width: 6px;
-    height: 6px;
-    border: 2px solid currentcolor;
-    border-radius: 0 1px 0 0;
-    border-width: 2px 2px 0 0;
-  }
-
-  header nav .nav-sections .nav-drop[aria-expanded="true"]::after {
-    top: unset;
-    bottom: .5em;
-    transform: rotate(315deg);
-  }
-
-  header nav .nav-sections ul {
+  header .nav-sections nav ul {
     display: flex;
-    gap: 2em;
-    margin: 0;
-    font-size: var(--body-font-size-xs);
+    flex-direction: row;
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li {
-    flex: 0 1 auto;
-    position: relative;
-    font-weight: 500;
-  }
-
-  header nav .nav-sections .default-content-wrapper > ul > li > ul {
-    display: none;
+  header .nav-sections .subsection {
     position: relative;
   }
-
-  header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded="true"] > ul {
-    display: block;
+  
+  header .nav-sections .subsection button + ul {
+    flex-direction: column;
+    gap: 0;
     position: absolute;
-    left: -1em;
-    width: 200px;
-    margin-top: 12px;
-    padding: 1em;
-    background-color: var(--light-color);
-    white-space: initial;
+    top: 100%;
+    min-width: calc(100% + var(--horizontal-spacing));
+    border-radius: 0.5em;
+    padding: 0.5em 0;
+    background-color: var(--color-background);
+    box-shadow: var(--shadow-default);
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li > ul::before {
+  header .nav-sections .subsection button + ul::before {
     content: '';
     position: absolute;
     top: -8px;
-    left: 8px;
+    right: calc(var(--horizontal-spacing) + 0.3em);
     width: 0;
     height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-bottom: 8px solid var(--light-color);
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-bottom: 9px solid var(--color-background);
+    z-index: 2;
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li > ul > li {
-    padding: 8px 0;
+  header .nav-sections .subsection button + ul > li a {
+    display: block;
+    border-radius: 0;
+    padding-left: 0.75em;
   }
 }
 
 /* tools */
-header nav .nav-tools {
+header .nav-tools {
   grid-area: tools;
+  align-self: flex-start;
+  line-height: 0;
+}
+
+header .nav-tools a.button {
+  box-sizing: content-box;
+  width: 1em;
+  height: 1em;
+  border-color: transparent;
+  border-radius: 50%;
+  padding: 0.4em;
+  background-color: transparent;
+  transition: background-color 0.2s;
+  cursor: pointer;
+}
+
+header .nav-tools a.button:hover {
+  background-color: var(--gray-100);
+}
+
+@media (width >= 900px) {
+  header .nav-tools {
+    align-self: center;
+  }
+  
+  header .nav-tools p.button-wrapper {
+    margin: 0;
+  }
+}
+
+/* hamburger */
+header .nav-hamburger {
+  grid-area: hamburger;
+}
+
+header .nav-hamburger button {
+  box-sizing: content-box;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  padding: 0.4em;
+  background-color: transparent;
+  transition: background-color 0.2s;
+  cursor: pointer;
+}
+
+header .nav-hamburger button:hover,
+header .nav-hamburger button:focus {
+  background-color: var(--gray-100);
+}
+  
+header .nav-hamburger i.symbol-hamburger,
+header .nav-hamburger i.symbol-hamburger::before,
+header .nav-hamburger i.symbol-hamburger::after {
+  width: 100%;
+  height: var(--border-m);
+}
+
+header .nav-hamburger i.symbol-hamburger {
+  transition: background-color 0.2s;
+}
+
+header .nav-hamburger i.symbol-hamburger::before,
+header .nav-hamburger i.symbol-hamburger::after {
+  left: 0;
+  width: 100%;
+  height: var(--border-m);
+  background-color: currentcolor;
+  transform: rotate(0);
+  transition: transform 0.4s, top 0.4s, bottom 0.4s;
+}
+
+header .nav-hamburger i.symbol-hamburger::before {
+  top: -6px;
+}
+
+header .nav-hamburger i.symbol-hamburger::after {
+  bottom: -6px;
+}
+
+header .nav-hamburger [aria-expanded='true'] i.symbol-hamburger {
+  background-color: transparent;
+}
+
+header .nav-hamburger [aria-expanded='true'] i.symbol-hamburger::before {
+  transform: rotate(45deg);
+  top: 0;
+}
+
+header .nav-hamburger [aria-expanded='true'] i.symbol-hamburger::after {
+  transform: rotate(-45deg);
+  bottom: 0;
 }
