feat: main styles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,10 +96,10 @@ header {
 
 main {
   max-width: 1200px;
-  margin: 0 var(--horizontal-spacing);
-  padding: var(--horizontal-spacing) 0;
-  border-radius: var(--rounding-xl);
-  background-color: var(--color-background);
+  /* margin: 0 var(--horizontal-spacing); */
+  /* padding: var(--horizontal-spacing) 0; */
+  /* border-radius: var(--rounding-xl); */
+  /* background-color: var(--color-background); */
 }
 
 @media (width >= 900px) {
