--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,17 +1,27 @@
 /* stylelint-disable max-line-length */
 @font-face {
   font-display: swap;
-  font-family: robotoflex;
+  font-family: poppinsbold;
   font-style: normal;
-  src: url('../fonts/RobotoFlex.woff2') format('woff2');
+  font-weight: 700;
+  src: url('../fonts/Poppins-Bold.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
   font-display: swap;
-  font-family: robotomono;
+  font-family: poppinsmedium;
+  font-style: normal;
+  font-weight: 500;
+  src: url('../fonts/Poppins-Medium.woff2') format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-display: swap;
+  font-family: poppinsregular;
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/RobotoMono.woff2') format('woff2');
+  src: url('../fonts/Poppins-Regular.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
