--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,11 @@
 /* stylelint-disable no-descending-specificity */
 header {
-  padding: var(--spacing-m) var(--horizontal-spacing);
+  position: fixed;
+  inset: 0;
+  bottom: unset;
+  padding: var(--spacing-xs);
+  background-color: var(--color-background);
+  overflow-y: hidden;
 }
 
 header a:any-link {
@@ -16,11 +21,12 @@ header ul {
 header section {
   display: grid;
   grid-template:
-    'title hamburger' auto
-    'sections tools' 1fr / 1fr auto;
+    'title hamburger cart' auto
+    'sections sections sections' 1fr / 1fr 1fr 1fr;
   align-items: center;
+  justify-items: center;
   gap: 0 var(--horizontal-spacing);
-  max-width: 1200px;
+  max-width: var(--site-width);
   height: 0;
   margin: 0 auto;
   transition: height 0.6s;
@@ -29,9 +35,8 @@ header section {
 
 header section[data-expanded='true'] {
   grid-template:
-    'title hamburger' auto
-    'sections sections' auto
-    'tools tools' 1fr / 1fr auto;
+    'title hamburger cart' auto
+    'sections sections sections' 1fr / 1fr 1fr 1fr;
   gap: var(--horizontal-spacing);
   height: calc(100dvh - (2 * var(--spacing-m)));
   max-height: calc(100dvh - (2 * var(--spacing-m)));
@@ -42,34 +47,91 @@ header section > [aria-hidden='true'] {
 }
 
 @media (width >= 900px) {
+  header {
+    bottom: 0;
+    width: var(--header-width);
+    border-right: var(--border-m) solid;
+    padding: 0;
+  }
+
   header section[data-expanded='true'] {
     grid-template:
-      'title sections tools' auto / auto 1fr auto;
-    height: 0;
+      'title' auto
+      'sections' 1fr / 100%;
+  }
+}
+
+@media (width >= 1200px) {
+  header {
+    border-left: var(--border-m) solid;
+    left: calc(50vw - (var(--site-width) / 2));
   }
 }
 
 /* title */
 header .nav-title {
   grid-area: title;
+  justify-self: flex-start;
 }
 
 header .nav-title .title-content {
   margin: 0;
-  font-size: var(--title-size-l);
-  font-weight: var(--weight-bold);
+  font-size: 44px;
+  line-height: 0;
+}
+
+header .nav-title .title-content a {
+  display: block;
+  border-radius: 50%;
+  padding: var(--spacing-xs);
+  background-color: transparent;
+  line-height: 0;
+  transition: background-color 0.2s, color 0.2s, transform 0.2s;
+}
+
+header .nav-title .title-content a:hover {
+  background-color: var(--color-link-hover);
+  color: var(--color-background);
+  transform: rotate(13.5deg);
+}
+
+@media (width >= 900px) {
+  header .nav-title {
+    justify-self: unset;
+    padding: var(--spacing-xs) 0.75em;
+  }
+
+  header .nav-title .title-content {
+    font-size: 64px;
+  }
 }
 
 /* sections */
 header .nav-sections {
   grid-area: sections;
+  align-self: stretch;
+  display: grid;
+  width: 100%;
+  overflow-y: auto;
 }
 
-header .nav-sections nav ul {
+header .nav-sections nav {
   display: flex;
-  flex-direction: column;
-  gap: 1ch;
-  font-size: var(--body-size-m);
+  height: 100%;
+  align-items: stretch;
+}
+
+header .nav-sections ul {
+  display: grid;
+  grid-template-columns: 1fr;
+  flex-grow: 1;
+  height: 100%;
+  font-size: var(--heading-size-xl);
+}
+
+header .nav-sections ul li {
+  display: flex;
+  align-items: center;
 }
 
 header .nav-sections nav > ul > li > a,
@@ -77,20 +139,18 @@ header .nav-sections button,
 header .nav-sections button + ul > li a {
   display: block;
   width: 100%;
-  border-radius: 0.5em;
   padding: 0.3em 0.75em;
   background-color: transparent;
-  text-align: left;
+  text-align: center;
   transition: background-color 0.2s, color 0.2s;
   cursor: pointer;
 }
-
 
 header .nav-sections nav ul li a:hover,
 header .nav-sections nav ul li a:focus,
 header .nav-sections button:hover,
 header .nav-sections button:focus {
-  background-color: var(--gray-100);
+  background-color: var(--color-link-hover);
   text-decoration: none;
 }
 
@@ -146,9 +206,22 @@ header .nav-sections i.symbol-chevron::after {
 }
 
 @media (width >= 900px) {
+  header .nav-sections {
+    align-self: center;
+    max-height: calc(100dvh - (64px + (4 * var(--spacing-xs)) + var(--horizontal-spacing)));
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
   header .nav-sections nav ul {
-    display: flex;
-    flex-direction: row;
+    gap: 0.3em;
+    font-size: var(--heading-size-s);
+  }
+
+  header .nav-sections nav > ul > li > a,
+  header .nav-sections button,
+  header .nav-sections button + ul > li a {
+    padding: 0.75em;
   }
 
   header .nav-sections .subsection {
@@ -187,36 +260,64 @@ header .nav-sections i.symbol-chevron::after {
   }
 }
 
-/* tools */
-header .nav-tools {
-  grid-area: tools;
-  align-self: flex-start;
+/* cart */
+header .nav-cart {
+  grid-area: cart;
+  justify-self: flex-end;
   line-height: 0;
 }
 
-header .nav-tools a.button {
+header .nav-cart .button {
   box-sizing: content-box;
-  width: 1em;
-  height: 1em;
-  border-color: transparent;
+  position: relative;
   border-radius: 50%;
-  padding: 0.4em;
-  background-color: transparent;
-  transition: background-color 0.2s;
+  padding: var(--spacing-xs);
   cursor: pointer;
 }
 
-header .nav-tools a.button:hover {
-  background-color: var(--gray-100);
+header .nav-cart .icon svg,
+header .nav-cart .icon img {
+  width: 44px;
+  height: 44px;
+}
+
+header .nav-cart #nav-cart-total {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 24px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  border-radius: 50%;
+  background-color: var(--color-background);
+  letter-spacing: -0.1ch;
+  font-size: var(--detail-size-s);
+  font-weight: bold;
+  text-align: center;
+  transition: background-color 0.2s, color 0.2s;
+  z-index: 1;
+}
+
+header .nav-cart .button:hover #nav-cart-total {
+  background-color: var(--color-link-hover);
+  color: var(--color-background);
 }
 
 @media (width >= 900px) {
-  header .nav-tools {
-    align-self: center;
+  header .nav-cart {
+    position: fixed;
+    top: var(--spacing-xs);
+    right: var(--spacing-xs);
   }
-  
-  header .nav-tools p.button-wrapper {
-    margin: 0;
+}
+
+@media (width >= 1200px) {
+  header .nav-cart {
+    right: calc((50vw + var(--spacing-xs)) - (var(--site-width) / 2));
   }
 }
 
@@ -227,25 +328,32 @@ header .nav-hamburger {
 
 header .nav-hamburger button {
   box-sizing: content-box;
-  width: 1em;
-  height: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
   border-radius: 50%;
   padding: 0.4em;
   background-color: transparent;
+  color: var(--color-link);
   transition: background-color 0.2s;
   cursor: pointer;
 }
 
 header .nav-hamburger button:hover,
 header .nav-hamburger button:focus {
-  background-color: var(--gray-100);
+  background-color: var(--color-link-hover);
+  color: var(--color-background);
 }
   
 header .nav-hamburger i.symbol-hamburger,
 header .nav-hamburger i.symbol-hamburger::before,
 header .nav-hamburger i.symbol-hamburger::after {
-  width: 100%;
+  width: 24px;
   height: var(--border-m);
+  background-color: currentcolor;
+  color: currentcolor;
 }
 
 header .nav-hamburger i.symbol-hamburger {
