--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -296,13 +296,12 @@ header .nav-cart button {
   padding: var(--spacing-xs);
   color: var(--color-text);
   cursor: pointer;
-  transition: background 0.1s;
+  transition: background-color 0.2s;
 }
 
 header .nav-cart button:hover,
 header .nav-cart button:focus {
-  background-color: var(--color-link-hover);
-  background: var(--gradient);
+  background-color: var(--blue-lightest);
 }
 
 header .nav-cart .icon svg,
@@ -328,13 +327,12 @@ header .nav-cart #nav-cart-total {
   font-size: var(--detail-size-s);
   font-weight: bold;
   text-align: center;
-  transition: background 0.1s;
+  transition: background-color 0.2s;
   z-index: 1;
 }
 
 header .nav-cart button:hover #nav-cart-total {
-  background-color: var(--color-link-hover);
-  background: var(--gradient);
+  background-color: var(--blue-lightest);
 }
 
 @media (width >= 900px) {
@@ -367,14 +365,13 @@ header .nav-hamburger button {
   padding: 0.4em;
   background-color: transparent;
   color: var(--color-link);
-  transition: background 0.1s;
+  transition: background-color 0.2s;
   cursor: pointer;
 }
 
 header .nav-hamburger button:hover,
 header .nav-hamburger button:focus {
-  background-color: var(--color-link-hover);
-  background: var(--gradient);
+  background-color: var(--blue-lightest);
 }
   
 header .nav-hamburger i.symbol-hamburger,
