--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -25,7 +25,6 @@ header section {
     'sections sections sections' 1fr / 1fr 1fr 1fr;
   place-items: center;
   gap: 0 var(--horizontal-spacing);
-  max-width: var(--site-width);
   height: 0;
   margin: 0 auto;
   transition: height 0.6s;
@@ -47,23 +46,17 @@ header section > [aria-hidden='true'] {
 
 @media (width >= 900px) {
   header {
-    bottom: 0;
-    width: var(--header-width);
-    border-right: var(--border-m) solid;
-    padding: 0;
+    border-bottom: var(--border-m) solid;
   }
 
   header section[data-expanded='true'] {
-    grid-template:
-      'title' auto
-      'sections' 1fr / 100%;
+    grid-template: 
+      'title sections cart' auto 1fr auto;
+    display: flex;
   }
-}
 
-@media (width >= 1200px) {
-  header {
-    border-left: var(--border-m) solid;
-    left: calc(50vw - (var(--site-width) / 2));
+  header section[data-expanded='true'] {
+    height: var(--header-height);
   }
 }
 
@@ -92,17 +85,6 @@ header .nav-title .title-content a:hover {
   background: var(--gradient);
   color: var(--color-background);
   transform: rotate(13.5deg);
-}
-
-@media (width >= 900px) {
-  header .nav-title {
-    justify-self: unset;
-    padding: var(--spacing-xs) 0.75em;
-  }
-
-  header .nav-title .title-content {
-    font-size: 64px;
-  }
 }
 
 /* sections */
@@ -216,15 +198,11 @@ header .nav-sections i.symbol-chevron::after {
 }
 
 @media (width >= 900px) {
-  header .nav-sections {
-    align-self: center;
-    max-height: calc(100dvh - (64px + (4 * var(--spacing-xs)) + var(--horizontal-spacing)));
-    overflow: hidden auto;
-  }
-
   header .nav-sections nav ul {
-    gap: 0.3em;
-    font-size: var(--heading-size-s);
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    font-size: var(--heading-size-m);
   }
 
   header .nav-sections nav > ul > li > a,
@@ -326,20 +304,6 @@ header .nav-cart #nav-cart-total {
   text-align: center;
   transition: background-color 0.2s;
   z-index: 1;
-}
-
-@media (width >= 900px) {
-  header .nav-cart {
-    position: fixed;
-    top: var(--spacing-xs);
-    right: var(--spacing-xs);
-  }
-}
-
-@media (width >= 1200px) {
-  header .nav-cart {
-    right: calc((50vw + var(--spacing-xs)) - (var(--site-width) / 2));
-  }
 }
 
 /* hamburger */
