--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,6 +3,10 @@ footer {
   font-size: var(--body-size-xs);
   background-color: var(--blue-lightest);
   text-align: center;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 footer .button-wrapper {
