WIP - Trying to fix header.

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -51,9 +51,9 @@ header section > [aria-hidden='true'] {
   }
   
   header section[data-expanded='true'] {
-    grid-template: 
-      'title sections cart' auto 1fr auto;
-    display: flex;
+    display: grid;
+    grid-template:
+    'title sections cart' auto;
     height: var(--header-height);
     transition: none;
   }
@@ -197,6 +197,14 @@ header .nav-sections i.symbol-chevron::after {
 }
 
 @media (width >= 900px) {
+  header .nav-sections {
+    background-color: green;
+    /* display: flex;
+    width: 100%;
+    justify-content: space-between;
+    font-size: var(--heading-size-m); */
+  }
+
   header .nav-sections nav ul {
     display: flex;
     width: 100%;
